@@ -88,6 +88,7 @@ Corregido conmutar breakpoint en una posición que ya tenia un breakpoint cuando
 Corregido smartload de un archivo de cinta cuando un dsk está insertado
 Corregido visual casette tape al insertar una cinta no soportada
 Corregida pestaña de protección de escritura en ventana de visual hilow datadrive
+Corregida columna del Selector de Archivos para texto "<dir>" en carpetas con caracteres utf-8
 
 ----
 
