@@ -88,6 +88,7 @@ Fixed toggle breakpoint on a position that already had a breakpoint when breakpo
 Fixed smartloading a tape file when a dsk is inserted
 Fixed visual casette tape when inserting an unsupported tape
 Fixed write protect tab on visual hilow datadrive window
+Fixed File Selector column for "<dir>" text on folders with utf-8 characters
 
 ----
 
